Updated front end layout upgraded to bootstrap 5 + fixed layout issues grouped account UI styles into block made addition to gitignore file

--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -19,7 +19,6 @@ body{min-height:100%;}
     z-index:-1;
     background-repeat:no-repeat;
     background-position:center center;
-    background-image:url(/app/client/images/bridge3.jpg);
     -moz-background-size: cover;
     background-size: cover;                       
 }            
